--- a/about.hbs
+++ b/about.hbs
@@ -39,7 +39,9 @@
     <main class="container">
         <div class="intro">
             <h1>Third Party Licenses</h1>
-            <p>This page lists the licenses of the projects used in cargo-about.</p>
+            <p>This page lists the licenses of the projects used in graphANNIS.</p>
+            <p>To re-generate this list, install the <a href="https://crates.io/crates/cargo-about">cargo-about</a> Cargo plugin and run <pre>cargo about generate about.hbs > third-party-licenses.html</pre></p>
+            
         </div>
     
         <h2>Overview of licenses:</h2>
